# NLP-Mental-Health-Chatbot

./: README.md  pyproject.toml  requirements.txt
notebooks/: demo.ipynb
py/: DataAnalyzer.py  DataLoader.py  DataPreprocessor.py  DatasetPreparation.py  EmbeddingGenerator.py  EmotionalChatBotModel.py  GradioInterface.py  SentimentAnalyzer.py  StreamlitInterface.py  TextLenght.py  main.py
