[tool.poetry]
name = "langchaincourse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlip = "^0.2"
seaborn = "^0.13.0"
mlflow = "^2.9.2"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
jupyter = "^1.0.0"
jupyterlab = "^4.0.9"
langchain = "^0.0.350"
openai = "^1.3.9"
tiktoken = "^0.5.2"
pymupdf = "^1.23.7"
langchain-community = "^0.0.3"
textblob = "^0.17.1"
transformers = "^4.36.1"
torch = "^2.1.2"
streamlit = "^1.29.0"
gradio = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
